KEYCLOAK-18: Make externalId attribute name configurable. Fail login in case more than 1 user matches by externalId.